--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url(uplot/dist/uPlot.min.css);
+@import 'npm:uplot/dist/uPlot.min.css';
 
 @import url(./icons.css);
 
@@ -96,11 +96,15 @@ button.nostyle {
   top: 50%;
   position: relative;
 }
-button:hover {
-  background-color: #e4e4e4;
-}
 button#viewGraph {
   padding-left: 0.75rem!important;
+}
+button#viewGraph:hover {
+  background-color: #e4e4e4;
+}
+.btn:focus {
+  text-decoration: unset;
+  box-shadow: none;
 }
 span#graphDesc {
   font-size: 14px;
@@ -167,11 +171,7 @@ div#info {
 #loadStatus,
 #linkedColumn, 
 #noteColumn,
-#searchErrorCol,
 #filter {
-  display: none;
-}
-#searchForm {
   display: none;
 }
 tr:first-child td,
@@ -206,8 +206,11 @@ h5.head {
   color: #666;
   padding: 0.75rem;
 }
-.btn-link {
+.btn-link, .btn-link:hover {
   color: #00f;
+}
+.btn-link:hover {
+  text-decoration: underline;
 }
 div#spinnerContainer {
   display: none;
