--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,31 @@
   font-size: 16px;
 }
 
+/* Dark mode colors */
+.dark-mode {
+  --dark-2: hsl(0, 0%, 3%);
+  --dark-2: hsl(0, 0%, 6%);
+  --dark-3: hsl(0, 0%, 9%);
+  --dark-4: hsl(0, 0%, 12%);
+  --dark-5: hsl(0, 0%, 15%);
+  --dark-6: hsl(0, 0%, 18%);
+  --dark-7: hsl(0, 0%, 21%);
+  --dark-8: hsl(0, 0%, 24%);
+
+  --light-1: hsl(0, 0%, 80%);
+  --light-2: hsl(0, 0%, 83%);
+  --light-3: hsl(0, 0%, 86%);
+
+  --text-color: hsl(0, 0%, 69%);
+  --link-color: rgb(31, 136, 217);
+  --author-color: rgb(108, 208, 68);
+  --backdrop-color: hsla(0, 0%, 0%, .6);
+  --border-color: hsla(0, 0%, 0%, .25);
+  --divider-color: hsl(0, 0%, 40%);
+
+  --dark-scheme: dark;
+}
+
 * {
   margin: 0;
 }
@@ -38,7 +63,7 @@
 }
 a:link,
 a:visited {
-  color: #00e;
+  color: var(--link-color, #00e);
   text-decoration: none;
 }
 a:hover {
@@ -54,11 +79,11 @@ p {
   margin-bottom: 0;
 }
 body {
-  background-color: #bdf;
+  background-color: var(--dark-3, #bdf);
   font-family: "Open Sans", Arial, sans-serif;
   line-height: normal;
   font-size: 16px;
-  color: #000;
+  color: var(--text-color, #000);
   min-height: 100vh;
   position: relative;
 }
@@ -67,16 +92,46 @@ main {
   padding-bottom: 52px;
 }
 footer {
-  background-color: #def;
+  background-color: var(--dark-5, #def);
   padding: 10px 5px;
   position: absolute;
   bottom: 0;
   width: 100%;
-  border-top: 1px solid #999;
+  border-top: 1px solid var(--border-color, #999);
   box-sizing: border-box;
 }
+.form-control {
+  background-color: var(--dark-5, #fff);
+  border-color: var(--divider-color, #ced4da);
+}
+.form-control:focus {
+  background-color: var(--dark-4, #fff);
+  color: var(--text-color, #495057);
+}
+.card {
+  background-color: var(--dark-5, #fff);
+}
+.card-header {
+  border-bottom: 1px solid var(--border-color, #00000020);
+}
 .half-dark {
-  border-top: 1px solid rgba(0,0,0,0.5);
+  border-top: 1px solid var(--divider-color, rgba(0,0,0,0.5));
+}
+.table td {
+  border-top: 1px solid var(--divider-color, #dee2e6);
+}
+.table {
+  color: inherit;
+}
+input {
+  color-scheme: var(--dark-scheme, light); /* For color of calendar icon*/
+}
+canvas {
+  margin-top: 5px;
+  background-color: var(--light-1,);
+}
+.list-group-item {
+  background-color: var(--dark-5,);
 }
 h1 {
   padding: 0.1em 0;
@@ -100,7 +155,7 @@ button#viewGraph {
   padding-left: 0.75rem!important;
 }
 button#viewGraph:hover {
-  background-color: #e4e4e4;
+  background-color: var(--dark-8, #e4e4e4);
 }
 .btn:focus {
   text-decoration: unset;
@@ -114,12 +169,13 @@ span#graphDesc {
   pointer-events: none;
   position: absolute;
   padding: 4px 8px;
-  background-color: #fff;
+  background-color: var(--dark-2, #fff);
   box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   border: 1px solid #0005;
   white-space: pre;
   z-index: 105;
+  color: var(--text-color,);
   /* transition: all 100ms ease; */
 }
 option:disabled {
@@ -146,7 +202,7 @@ div#info {
   border-radius: 0;
 }
 .comment + .comment {
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
+  border-top: 1px solid var(--border-color, rgba(0, 0, 0, 0.25));
 }
 .dropdown:hover .dropdown-menu {
   display: block;
@@ -203,11 +259,14 @@ h5.head {
   text-transform: uppercase;
   font-size: 16px;
   font-weight: 600;
-  color: #666;
   padding: 0.75rem;
 }
+h5.head,
+.form-control::placeholder {
+    color: var(--text-color, #666);
+}
 .btn-link, .btn-link:hover {
-  color: #00f;
+  color: var(--link-color, #00e);
 }
 .btn-link:hover {
   text-decoration: underline;
@@ -230,6 +289,7 @@ div#spinner {
 }
 #loadCount {
   font-size: 14px;
+  color: var(--text-color,);
 }
 div#progress {
   height: 24px;
@@ -304,16 +364,15 @@ a.authorNameOp {
   font-weight: 600;
   letter-spacing: -0.5px;
 }
-a.authorName {
-  color: #00e;
-}
 a.authorNameOp {
-  color: #fff;
+  color: var(--author-color, #fff);
 }
 span.authorNameCreator {
-  background-color: #03f;
-  padding: 0 3px;
+  display: inline-block;
+  background-color: var(--dark-8, #03f);
+  padding: 0 8px;
   vertical-align: middle;
+  border-radius: 12px;
 }
 .noColor, .noColor:focus, a.noColor {
   color: inherit;
@@ -336,7 +395,7 @@ div#terms {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--backdrop-color, rgba(0, 0, 0, 0.4));
   animation-name: fadein;
   animation-duration: 0.25s;
 }
@@ -344,7 +403,7 @@ div#terms {
   position: relative;
   word-break: break-word;
   max-width: 800px;
-  background-color: #e0f0ff;
+  background-color: var(--dark-5, #e0f0ff);
   margin: 15vh auto;
   width: 90%;
   box-shadow: 8px 8px 12px 0 rgba(0, 0, 0, 0.2);
@@ -361,7 +420,7 @@ div#terms {
   padding: 8px 16px;
   font-weight: 600;
   font-size: 20px;
-  background-color: #bdf;
+  background-color: var(--dark-4, #bdf);
 }
 .terms-body {
   margin-top: 20px;
@@ -379,7 +438,7 @@ div#terms {
 }
 #closeTerms:focus,
 #closeTerms:hover {
-  background-color: #bdf;
+  background-color: var(--dark-8, #bdf);
   text-decoration: none;
   cursor: pointer;
 }
