--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,7 @@
   --backdrop-color: hsla(0, 0%, 0%, .6);
   --border-color: hsla(0, 0%, 0%, .25);
   --divider-color: hsl(0, 0%, 40%);
+  --red-color: hsl(0, 70%, 69%);
 
   --dark-scheme: dark;
 
@@ -75,7 +76,7 @@ a:hover {
   text-decoration: underline;
 }
 a:focus {
-  color: red;
+  color: var(--red-color, red);
 }
 b {
   font-weight: 600;
@@ -195,7 +196,7 @@ option:disabled {
   color: #999;
 }
 .red {
-  color: #b00;
+  color: var(--red-color, #b00);
 }
 div#info {
   display: none;
